# rapp-platform

rapp_aiui_tts/: CMakeLists.txt  README.md  package.xml
rapp_aiui_tts/cfg/: rapp_aiui_tts_params.yaml
rapp_aiui_tts/launch/: text_to_speech.launch
rapp_aiui_tts/src/: text_to_speech.py
rapp_aiui_tts/tests/rapp_aiui_tts/: functional_tests.launch  functional_tests.py
rapp_application_authentication_manager/src/rapp_application_authentication_manager/: application_authentication_node.py
rapp_mysql_wrapper/src/: mysql_wrapper.py
rapp_platform_launchers/launch/: rapp_platform_launch.launch
rapp_platform_ros_communications/srv/TextToSpeechEspeak/: TextToSpeechSrv.srv
rapp_web_services/config/services/: services.json  workers.json
rapp_web_services/services/add_pose/: iface_obj.js  svc.js
rapp_web_services/services/common/: svc.js
rapp_web_services/services/common_api/: svc.js
rapp_web_services/services/get_pose/: iface_obj.js  svc.js
rapp_web_services/services/text_to_speech/: iface_obj.js  svc.js
rapp_web_services/src/common/: logger.js
rapp_web_services/workers/: add_pose.js  common.js  common_api.js  get_pose.js
